--- a/scootes/rentals.html
+++ b/scootes/rentals.html
@@ -24,10 +24,10 @@
         <img src="images/motorcycle.png">
         <h1>Scootes</h1>
         <nav class="navigation">
-            <!--<button id="menu"></button>-->
+            <button id="menu"></button>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Rentals</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#" class="active">Rentals</a></li>
                 <li><a href="#">Reservations</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -35,7 +35,77 @@
     </header>
     <main>
         <h2>Rental Pricing Guide</h2>
-        <p>Find the best deal for your journey.</p>  
+        <p>Find the best deal for your journey.</p> 
+        <table id="table">
+            <thead>
+                <tr>
+                    <th colspan="6" scope="colgroup">Rental Pricing</th>
+                </tr>
+                <tr>
+                    <th colspan="2" scope="colgroup" id="empty"></th>
+                    <th colspan="2" scope="colgroup">Reservation</th>
+                    <th colspan="2" scope="colgroup">Walk-In</th>  
+                </tr>
+                <tr>
+                    <th scope="col">Rental Type</th>
+                    <th scope="col">Max. Persons</th>
+                    <th scope="col">Half Day (3 hrs)</th>
+                    <th scope="col">Full Day</th>
+                    <th scope="col">Half Day (3 hrs)</th>
+                    <th scope="col">Full Day</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Honda Metro Scooter</td>
+                    <td>1</td>
+                    <td>$20</td>
+                    <td>$30</td>
+                    <td>$25</td>
+                    <td>$35</td>
+                </tr>
+                <tr>
+                    <td>Honda Dio Scooter</td>
+                    <td>2</td>
+                    <td>$30</td>
+                    <td>$40</td>
+                    <td>$35</td>
+                    <td>$45</td>
+                </tr>
+                <tr>
+                    <td>Honda PCX150 Scooter</td>
+                    <td>2</td>
+                    <td>$40</td>
+                    <td>$50</td>
+                    <td>$45</td>
+                    <td>$55</td>
+                </tr>
+                <tr>
+                    <td>Honda Pioneer ATV</td>
+                    <td>4</td>
+                    <td>$50</td>
+                    <td>$70</td>
+                    <td>$60</td>
+                    <td>$80</td>
+                </tr>
+                <tr>
+                    <td>Jeep Wrangler - 4 door with a/c</td>
+                    <td>5</td>
+                    <td>$70</td>
+                    <td>$100</td>
+                    <td>$85</td>
+                    <td>$125</td>
+                </tr>
+                <tr>
+                    <td>Jeep Wrangler - 2 door</td>
+                    <td>4</td>
+                    <td>$60</td>
+                    <td>$85</td>
+                    <td>$70</td>
+                    <td>$90</td>
+                </tr>
+            </tbody>
+        </table> 
     </main>
     <footer>
         <div>
