--- a/scootes/rentals.html
+++ b/scootes/rentals.html
@@ -72,5 +72,7 @@
             <a href="https://www.tiktok.com"><img src="images/tiktok-icon.webp" alt="TikTok"></a>
         </nav>
     </footer>
+    <script src="scripts/hamburger.js"></script>
+    <script src="scripts/priceChart.js"></script>
 </body>
 </html>
