--- a/scootes/thanks.html
+++ b/scootes/thanks.html
@@ -49,5 +49,6 @@
             <a href="https://www.tiktok.com"><img src="images/tiktok-icon.webp" alt="TikTok"></a>
         </nav>
     </footer>
+    <script src="scripts/hamburger.js"></script>
 </body>
 </html>
