--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -26,10 +26,10 @@
         <nav class="navigation">
             <button id="menu"></button>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Rentals</a></li>
-                <li><a href="#" class="active">Reservations</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://echlarson.github.io/wdd230/scoots/home.html">Home</a></li>
+                <li><a href="https://echlarson.github.io/wdd230/scoots/rentals.html">Rentals</a></li>
+                <li><a href="https://echlarson.github.io/wdd230/scoots/reservations.html" class="active">Reservations</a></li>
+                <li><a href="https://echlarson.github.io/wdd230/scoots.contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -326,8 +326,8 @@
                 </fieldset>
                 <fieldset>
                     <legend>Vehicle Drop-off Locations</legend>
-                        <label class="radio"><input type="radio" name="drop" value="Av. Rafael E. Melgar 999, Col. Centro, Cozumel, Q.R., Mexico">Av. Rafael E. Melgar 999, Col. Centro, Cozumel, Q.R., Mexico</label>
-                        <label class="radio"><input type="radio" name="drop" value="Carretera Costera Sur Km 3.8, Zona Hotelera Sur, Cozumel, Q.R., Mexico">Carretera Costera Sur Km 3.8, Zona Hotelera Sur, Cozumel, Q.R., Mexico</label>
+                        <label class="radio"><input type="radio" name="drop" value="Comercial Punta Langosta, Av. Rafael E. Melgar 599, Centro, 77600 Cozumel, Q.R., Mexico">Comercial Punta Langosta, Av. Rafael E. Melgar 599, Centro, 77600 Cozumel, Q.R., Mexico</label>
+                        <label class="radio"><input type="radio" name="drop" value="Flamingos 1, Flamingos 2, 77660 Cozumel, Q.R., Mexico">Flamingos 1, Flamingos 2, 77660 Cozumel, Q.R., Mexico</label>
                 </fieldset>
                 <input type="hidden" name="date" id="date">
                 <input type="submit" value="Make Your Reservation">
