--- a/scoots/home.html
+++ b/scoots/home.html
@@ -26,10 +26,10 @@
         <nav class="navigation">
             <button id="menu"></button>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Rentals</a></li>
-                <li><a href="#">Reservations</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://echlarson.github.io/wdd230/scoots/home.html" class="active">Home</a></li>
+                <li><a href="https://echlarson.github.io/wdd230/scoots/rentals.html">Rentals</a></li>
+                <li><a href="https://echlarson.github.io/wdd230/scoots/reservations.html">Reservations</a></li>
+                <li><a href="https://echlarson.github.io/wdd230/scoots.contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
