--- a/scoots/home.html
+++ b/scoots/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Scootes Rental</title>
+    <title>Scoots Rental</title>
     <!--Meta Data-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Scootes Rental Services Website">
+    <meta name="description" content="Scoots Rental Services Website">
     <meta name="author" content="Elizabeth Chlarson">
     <!--Styles-->
     <link rel="stylesheet" href="styles/normalize.css">
@@ -22,7 +22,7 @@
 <body id="home">
     <header>
         <img src="images/motorcycle.png">
-        <h1>Scootes</h1>
+        <h1>Scoots</h1>
         <nav class="navigation">
             <button id="menu"></button>
             <ul>
@@ -94,7 +94,7 @@
     </main>
     <footer>
         <div>
-            <h3>Scootes © 2024</h3>
+            <h3>Scoots © 2024</h3>
             <p>☎️ +52 800 123 4567<br>
                 ⏰Open 7 Days a week, from 8AM - 7PM.</p>
         </div>
