--- a/scoots/thanks.html
+++ b/scoots/thanks.html
@@ -22,7 +22,7 @@
 <body id="thankyou">
     <header>
         <img src="images/motorcycle.png">
-        <h1>Scootes</h1>
+        <h1>Scoots</h1>
         <nav class="navigation">
             <button id="menu"></button>
             <ul>
@@ -39,7 +39,7 @@
     </main>
     <footer>
         <div>
-            <h3>Scootes © 2024</h3>
+            <h3>Scoots © 2024</h3>
             <p>☎️ +52 800 123 4567<br>
                 ⏰Open 7 Days a week, from 8AM - 7PM.</p>
         </div>
