fix button on home

--- a/scoots/home.html
+++ b/scoots/home.html
@@ -38,7 +38,7 @@
             <div>
                 <h2>Don't miss out on the perfect rental for your vacation needs.</h2>
                 <p>Make your rental reservation today.</p>
-                <button>Check Availability</button>
+                <button class="button" onclick="window.location.href='https://echlarson.github.io/wdd230/scoots/reservations.html';">Check Avalibility</button>
             </div>
             <img src="images/honda_color_hero.png">
         </div>
