--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -29,7 +29,7 @@
                 <li><a href="https://echlarson.github.io/wdd230/scoots/home.html">Home</a></li>
                 <li><a href="https://echlarson.github.io/wdd230/scoots/rentals.html">Rentals</a></li>
                 <li><a href="https://echlarson.github.io/wdd230/scoots/reservations.html">Reservations</a></li>
-                <li><a href="https://echlarson.github.io/wdd230/scoots.contact.html" class="active">Contact</a></li>
+                <li><a href="https://echlarson.github.io/wdd230/scoots/contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
