rentals table fix

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -36,7 +36,7 @@
     <main>
         <h2>Rental Pricing Guide</h2>
         <p>Find the best deal for your journey.</p> 
-        <table id="table">
+        <table id="table" style="overflow-x:auto;">
             <thead>
                 <tr>
                     <th colspan="6" scope="colgroup">Rental Pricing</th>
