rentals table overflow fix

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -36,29 +36,31 @@
     <main>
         <h2>Rental Pricing Guide</h2>
         <p>Find the best deal for your journey.</p> 
-        <table id="table" style="overflow-x:auto;">
-            <thead>
-                <tr>
-                    <th colspan="6" scope="colgroup">Rental Pricing</th>
-                </tr>
-                <tr>
-                    <th colspan="2" scope="colgroup" id="empty"></th>
-                    <th colspan="2" scope="colgroup">Reservation</th>
-                    <th colspan="2" scope="colgroup">Walk-In</th>  
-                </tr>
-                <tr>
-                    <th scope="col">Rental Type</th>
-                    <th scope="col">Max. Persons</th>
-                    <th scope="col">Half Day (3 hrs)</th>
-                    <th scope="col">Full Day</th>
-                    <th scope="col">Half Day (3 hrs)</th>
-                    <th scope="col">Full Day</th>
-                </tr>
-            </thead>
-            <tbody id="chart">
-                <!--JSON Info Here-->
-            </tbody>
-        </table> 
+        <div style="overflow-x:auto;">
+            <table id="table">
+                <thead>
+                    <tr>
+                        <th colspan="6" scope="colgroup">Rental Pricing</th>
+                    </tr>
+                    <tr>
+                        <th colspan="2" scope="colgroup" id="empty"></th>
+                        <th colspan="2" scope="colgroup">Reservation</th>
+                        <th colspan="2" scope="colgroup">Walk-In</th>  
+                    </tr>
+                    <tr>
+                        <th scope="col">Rental Type</th>
+                        <th scope="col">Max. Persons</th>
+                        <th scope="col">Half Day (3 hrs)</th>
+                        <th scope="col">Full Day</th>
+                        <th scope="col">Half Day (3 hrs)</th>
+                        <th scope="col">Full Day</th>
+                    </tr>
+                </thead>
+                <tbody id="chart">
+                    <!--JSON Info Here-->
+                </tbody>
+            </table> 
+        </div>
     </main>
     <footer>
         <div>
