--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -21,7 +21,7 @@
 </head>
 <body id="rentals">
     <header>
-        <img src="images/motorcycle.png">
+        <img src="images/motorcycle.png" alt="logo">
         <h1>Scoots</h1>
         <nav class="navigation">
             <button id="menu"></button>
