--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -21,7 +21,7 @@
 </head>
 <body id="reservations">
     <header>
-        <img src="images/motorcycle.png">
+        <img src="images/motorcycle.png" alt="logo">
         <h1>Scoots</h1>
         <nav class="navigation">
             <button id="menu"></button>
@@ -60,7 +60,7 @@
                         <label>Last Name*<input type="text" name="lname" required></label>
                         <label>Phone*<input type="tel" name="phone" placeholder="+52 800 123 4567" required></label>
                         <label>Email*<input type="email" name="email" placeholder="someone@gmail.com" required></label>
-                        <label for="country" required>Country of Residence</label>
+                        <label for="country">Country of Residence</label>
                             <select name="country" id="country">
                                 <option value="United States">United States</option>
                                 <option value="Afghanistan">Afghanistan</option> 
@@ -308,7 +308,7 @@
                     <legend>Rental Details</legend>
                         <label>Vehicle Pickup Date<input type="date" id="start" name="start" required></label>
                         <label>Legth of Rental Period<input type="text" name="period" placeholder="Number of Days" pattern="[0-9]*" required></label>
-                        <label for="vehicle" required>Vehicle Type</label>
+                        <label for="vehicle">Vehicle Type</label>
                             <select name="vehicle" id="vehicle">
                                 <option value="Honda Metropolitan (49cc)">Honda Metropolitan (49cc)</option>
                                 <option value="Honda Dio (110cc)">Honda Dio (110cc)</option>
