--- a/scoots/home.html
+++ b/scoots/home.html
@@ -40,7 +40,7 @@
                 <p>Make your rental reservation today.</p>
                 <button class="button" onclick="window.location.href='https://echlarson.github.io/wdd230/scoots/reservations.html';">Check Avalibility</button>
             </div>
-            <img src="images/honda_color_hero.png" alt="Recolored Motorcycles">
+            <img src="images/honda_color_hero.webp" alt="Recolored Motorcycles">
         </div>
         <div id="local">
             <div>
@@ -67,7 +67,7 @@
         </div>        
         <div id="options">
             <section>
-                <img src="images/Honda_Brazil_Dio_RBack.png" alt="Honda Motor Scooter">
+                <img src="images/Honda_Brazil_Dio_RBack.webp" alt="Honda Motor Scooter">
                 <h3>Honda Motor Scooters</h3>
                 <ul>
                     <li>Honda Metropolitan (49cc) - 1 person</li>
@@ -76,14 +76,14 @@
                 </ul>
             </section>
             <section>
-                <img src="images/honda_pioneer.png" alt="Side-by-Side ATV">
+                <img src="images/honda_pioneer.webp" alt="Side-by-Side ATV">
                 <h3>Side-by-Side ATVs</h3>
                 <ul>
                     <li>Honda Pioneer 1000 - 4 person</li>
                 </ul>
             </section>
             <section id="last">
-                <img src="images/jeep_wrangler.png" alt="Jeep Wrangler">
+                <img src="images/jeep_wrangler.webp" alt="Jeep Wrangler">
                 <h3>Jeep Wranglers</h3>
                 <ul>
                     <li>4 door manuel with A/C - 5 person</li>
