--- a/scoots/home.html
+++ b/scoots/home.html
@@ -40,7 +40,7 @@
                 <p>Make your rental reservation today.</p>
                 <button class="button" onclick="window.location.href='https://echlarson.github.io/wdd230/scoots/reservations.html';">Check Avalibility</button>
             </div>
-            <img src="images/honda_color_hero.webp" alt="Recolored Motorcycles">
+            <img src="images/honda_color_hero.webp" alt="Recolored Motorcycles" loading="lazy">
         </div>
         <div id="local">
             <div>
@@ -52,14 +52,14 @@
                         <p>Tempeture: <span id="curTemp"></span><br>
                            Humidity: <span id="curHumidity"></span><br>
                            Description: <span id="curDesc"></span></p>
-                        <img id="curIcon" alt="#" src="#">
+                        <img id="curIcon" alt="#" src="#" loading="lazy">
                     </section>
                     <section>
                         <h3>Tomorrows Forecast</h3>
                         <p>Tempeture: <span id="futTemp"></span><br>
                             Humidity: <span id="futHumidity"></span><br>
                             Description: <span id="futDesc"></span></p>
-                        <img id="futIcon" alt="#" src="#">
+                        <img id="futIcon" alt="#" src="#" loading="lazy">
                     </section>
                 </div>
             </div>
@@ -67,7 +67,7 @@
         </div>        
         <div id="options">
             <section>
-                <img src="images/Honda_Brazil_Dio_RBack.webp" alt="Honda Motor Scooter">
+                <img src="images/Honda_Brazil_Dio_RBack.webp" alt="Honda Motor Scooter" loading="lazy">
                 <h3>Honda Motor Scooters</h3>
                 <ul>
                     <li>Honda Metropolitan (49cc) - 1 person</li>
@@ -76,14 +76,14 @@
                 </ul>
             </section>
             <section>
-                <img src="images/honda_pioneer.webp" alt="Side-by-Side ATV">
+                <img src="images/honda_pioneer.webp" alt="Side-by-Side ATV" loading="lazy">
                 <h3>Side-by-Side ATVs</h3>
                 <ul>
                     <li>Honda Pioneer 1000 - 4 person</li>
                 </ul>
             </section>
             <section id="last">
-                <img src="images/jeep_wrangler.webp" alt="Jeep Wrangler">
+                <img src="images/jeep_wrangler.webp" alt="Jeep Wrangler" loading="lazy">
                 <h3>Jeep Wranglers</h3>
                 <ul>
                     <li>4 door manuel with A/C - 5 person</li>
