--- a/scoots/home.html
+++ b/scoots/home.html
@@ -24,7 +24,7 @@
         <img src="images/motorcycle.png" alt="logo">
         <h1>Scoots</h1>
         <nav class="navigation">
-            <button id="menu"></button>
+            <button id="menu" name="menu"></button>
             <ul>
                 <li><a href="https://echlarson.github.io/wdd230/scoots/home.html" class="active">Home</a></li>
                 <li><a href="https://echlarson.github.io/wdd230/scoots/rentals.html">Rentals</a></li>
