--- a/scoots/home.html
+++ b/scoots/home.html
@@ -24,7 +24,7 @@
         <img src="images/motorcycle.png" alt="logo">
         <h1>Scoots</h1>
         <nav class="navigation">
-            <button id="menu" name="menu"></button>
+            <button id="menu" title="menu"></button>
             <ul>
                 <li><a href="https://echlarson.github.io/wdd230/scoots/home.html" class="active">Home</a></li>
                 <li><a href="https://echlarson.github.io/wdd230/scoots/rentals.html">Rentals</a></li>
@@ -63,7 +63,7 @@
                     </section>
                 </div>
             </div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d239293.76244058926!2d-87.0284159!3d20.4255199!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4ef8efb0d19327%3A0x342ebcae5c018bfc!2sCozumel!5e0!3m2!1sen!2sus!4v1720754292053!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d239293.76244058926!2d-87.0284159!3d20.4255199!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4ef8efb0d19327%3A0x342ebcae5c018bfc!2sCozumel!5e0!3m2!1sen!2sus!4v1720754292053!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="map"></iframe>
         </div>        
         <div id="options">
             <section>
