--- a/scoots/thanks.html
+++ b/scoots/thanks.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="styles/large.css">
     <link rel="icon" href="images/motorcycle.png">
     <!--Open Graph Meta Tags-->
-    <meta property="og:title" content="#">
-    <meta property="og:type" content="#">
-    <meta property="og:image" content="#">
-    <meta property="og:url" content="#">
+    <meta property="og:title" content="Scoots Rental">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://echlarson.github.io/wdd230/scoots/images/honda_color_hero.webp">
+    <meta property="og:url" content="https://echlarson.github.io/wdd230/scoots/home.html">
 </head>
 <body id="thankyou">
     <header>
