--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -24,7 +24,7 @@
         <img src="images/motorcycle.png" alt="logo">
         <h1>Scoots</h1>
         <nav class="navigation">
-            <button id="menu"></button>
+            <button id="menu" title="menu"></button>
             <ul>
                 <li><a href="https://echlarson.github.io/wdd230/scoots/home.html">Home</a></li>
                 <li><a href="https://echlarson.github.io/wdd230/scoots/rentals.html">Rentals</a></li>
@@ -75,8 +75,8 @@
                     Mexico</p>
             </div>
             <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.9815370870856!2d-86.95749852591574!3d20.506983105497348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e59c4d55d8b43%3A0x4d000f0d47a757b0!2sPlaza%20Punta%20Langosta!5e0!3m2!1sen!2sus!4v1721151171862!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.5641551432113!2d-86.95393662591641!3d20.483086906298944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e5787a60e55a1%3A0x7539f72407877e59!2sEmily%C2%B4s%20Car%20Rental%20Cozumel!5e0!3m2!1sen!2sus!4v1721151217671!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.9815370870856!2d-86.95749852591574!3d20.506983105497348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e59c4d55d8b43%3A0x4d000f0d47a757b0!2sPlaza%20Punta%20Langosta!5e0!3m2!1sen!2sus!4v1721151171862!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="location one"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.5641551432113!2d-86.95393662591641!3d20.483086906298944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e5787a60e55a1%3A0x7539f72407877e59!2sEmily%C2%B4s%20Car%20Rental%20Cozumel!5e0!3m2!1sen!2sus!4v1721151217671!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="location two"></iframe>
             </div>
         </div>
     </main>
